--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-email": "^1.9.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "styled-components": "^5.3.9",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -50,6 +51,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/nodemailer": "^6.4.7",
     "@types/styled-components": "^5.1.26",
+    "@types/use-persisted-state": "^0.3.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "classnames": "^2.3.2",
