--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5",
+    "typewriter-effect": "^2.21.0",
     "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
