--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^2.0.0",
-    "react-google-recaptcha-v3": "^1.10.1",
+    "react-google-recaptcha": "^3.1.0",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5",
     "typewriter-effect": "^2.21.0",
