--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@types/nodemailer": "^6.4.7",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/styled-components": "^5.1.26",
     "@types/use-persisted-state": "^0.3.1",
     "autoprefixer": "^10.4.13",
