feat: contact us api and form

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,5 @@
 APP_ENV=development
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
 NEXT_PUBLIC_RECAPTCHA_SECRET_KEY=
@@ -7,7 +8,6 @@ NEXT_PUBLIC_SMTP_HOST=0.0.0.0
 NEXT_PUBLIC_SMTP_PORT=1025
 NEXT_PUBLIC_SMTP_USER=null
 NEXT_PUBLIC_SMTP_PASSWORD=null
-NEXT_PUBLIC_SMTP_FROM_EMAIL="albert@albertstudios.dev"
+NEXT_PUBLIC_SMTP_FROM_EMAIL="albert.buenaventura2009@gmail.com"
 
 NEXT_PUBLIC_EMAIL_RECIPIENTS=["albert.buenaventura2009@gmail.com"]
-
