--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "@storybook/test": "^7.6.17",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "date-fns": "^2.29.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "next": "^13.2.4",
+    "next": "^14.1.1",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -51,6 +49,8 @@
     "@storybook/nextjs": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@types/nodemailer": "^6.4.7",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/styled-components": "^5.1.26",
     "@types/use-persisted-state": "^0.3.1",
