--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/addon-links": "^7.6.17",
     "@storybook/nextjs": "^7.6.17",
     "@storybook/react": "^7.6.17",
+    "@svgr/webpack": "^8.1.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
