--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
+    "@next/third-parties": "^14.1.1",
     "@react-email/container": "^0.0.11",
     "@react-email/html": "^0.0.7",
     "@react-email/section": "^0.0.11",
